# NN_QuantizationLab

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
q_lab/: __init__.py  __main__.py  benchmark.py  cli.py  evaluation.py  experiments.py  input_data.py  models.py  onnx_utils.py  optimization.py  reporting.py  types.py
tests/: __init__.py  conftest.py  helpers.py  test_benchmark.py  test_cli.py  test_evaluation.py  test_external_model_sources.py  test_input_data.py  test_models.py  test_onnx_reporting.py  test_onnx_utils.py  test_optimization.py  test_third_party_models.py
